@@ -6,9 +6,9 @@
  *   DESCRIPTION
  *      definition of the iterator/container-style cursor classes
  *   C++-style wrappers for SQL cursors
- *   DO NOT INCLUDE THIS FILE DIRECTLY; include pqxx/pipeline instead.
+ *   DO NOT INCLUDE THIS FILE DIRECTLY; include pqxx/cursor instead.
  *
- * Copyright (c) 2004-2009, Jeroen T. Vermeulen <jtv@xs4all.nl>
+ * Copyright (c) 2004-2011, Jeroen T. Vermeulen <jtv@xs4all.nl>
  *
  * See COPYING for copyright license.  If you did not receive a file called
  * COPYING with this source code, please notify the distributor of this mistake,
